--- a/amaze-cli/Cargo.toml
+++ b/amaze-cli/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "amaze-cli"
+publish = false
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amaze = { path = "../amaze" }
+amaze = { path = "../amaze", features = ["renderers"] }
 clap = "4.5.23"
